--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <!-- 启动页 -->
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/AppTheme.Splash">
